# ebrain

./: .gitignore  README.md  pyproject.toml
.obsidian/: workspace.json
docs/.session/: STATE.md
scripts/: setup.py
src/ebrain/: __init__.py  cli.py  db.py  dream.py  entities.py  graph_store.py  llm.py  migrations.py  synthesize.py  vault.py  vault_daemon.py  vault_ingest.py  vault_watcher.py
src/ebrain/memory/: __init__.py  config.py  l0_recorder.py  l1_extractor.py  l2l3.py  offload.py  pipeline.py  qdrant.py  recall.py  types.py
tests/: test_ebrain.py  test_integration.py  test_vault.py
